--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.19.2",
     "boxen": "^4.2.0",
     "chalk": "^4.0.0",
+    "js-yaml": "^3.13.1",
     "yargs": "^15.3.1"
   }
 }
