--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gitlab-pipline": "src/index.js"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coverage": "npm test -- --collect-coverage"
   },
   "keywords": [
     "cicd",
