--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 
     "rules": {
         "consistent-return": "off",
-        "no-plusplus": "off"
+        "no-plusplus": "off",
+        "max-len": ["error",100, 2]
     }
 }
