--- a/__tests__/utils/data/invalid-token-4.yml
+++ b/__tests__/utils/data/invalid-token-4.yml
@@ -1,7 +1,7 @@
-gitlab_access_token: true
+accessToken: true
 projects:
   - groupA/projectA
   - userA/projectB
   - groupA/projectB
   - groupA/projectV
-update_intervals: 50
+updateIntervals: 50
