--- a/__tests__/utils/data/invalid-intervals-1.yml
+++ b/__tests__/utils/data/invalid-intervals-1.yml
@@ -1,8 +1,8 @@
-gitlab_access_token: 'string token'
+accessToken: 'string token'
 projects:
   - groupA/projectA
   - userA/projectB
   - groupA/projectB
   - groupA/projectV
-update_intervals:
+updateIntervals:
   seconds: 12
