--- a/__tests__/utils/data/invalid-projects-2.yml
+++ b/__tests__/utils/data/invalid-projects-2.yml
@@ -1,3 +1,3 @@
-gitlab_access_token: 'string value'
+accessToken: 'string value'
 projects: 'This is project A'
-update_intervals: 50
+updateIntervals: 50
