--- a/__tests__/utils/data/invalid-token-3.yml
+++ b/__tests__/utils/data/invalid-token-3.yml
@@ -1,8 +1,8 @@
-gitlab_access_token:
+accessToken:
   - This is an array
 projects:
   - groupA/projectA
   - userA/projectB
   - groupA/projectB
   - groupA/projectV
-update_intervals: 50
+updateIntervals: 50
