--- a/__tests__/utils/data/invalid-baseUrl-2.yml
+++ b/__tests__/utils/data/invalid-baseUrl-2.yml
@@ -1,5 +1,5 @@
-baseUrl: https://gitlab.com 
-accessToken: true
+baseUrl: true
+accessToken: 1233
 projects:
   - groupA/projectA
   - userA/projectB
