--- a/__tests__/utils/data/invalid-baseUrl-4.yml
+++ b/__tests__/utils/data/invalid-baseUrl-4.yml
@@ -1,5 +1,6 @@
-baseUrl: https://gitlab.com 
-accessToken: true
+baseUrl:
+  - 'https://gitlab.com'
+accessToken: 1233
 projects:
   - groupA/projectA
   - userA/projectB
