--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,7 @@
     },
     "moduleResolution": "node",
     "checkJs": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "exclude": ["node_modules"],
     "typeAcquisition": {
       "include": ["jest"]
