--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Mohammed Binsabbar",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^25.2.1",
+    "@types/jest-when": "^2.7.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -25,7 +27,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest": "^25.2.7",
-    "@types/jest": "^25.2.1"
+    "jest-when": "^2.7.1"
   },
   "dependencies": {
     "axios": "^0.19.2",
