--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gitlab-pipline": "src/index.js"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --testPathIgnorePatterns=/__tests__/__integration__/",
+    "test:integration": "jest /__tests__/__integration__/",
     "coverage": "npm test -- --collect-coverage",
     "lint": "./node_modules/eslint/bin/eslint.js ."
   },
