--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "boxen": "^4.2.0",
     "chalk": "^4.0.0",
     "js-yaml": "^3.13.1",
+    "moment": "^2.24.0",
     "yargs": "^15.3.1"
   }
 }
