handle none client errors in the message output

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.19.2",
     "boxen": "^4.2.0",
     "chalk": "^4.0.0",
+    "cli-table3": "^0.6.0",
     "js-yaml": "^3.13.1",
     "moment": "^2.24.0",
     "yargs": "^15.3.1"
