--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "jest": "^25.2.7",
+    "jest-extended": "^0.11.5",
     "jest-when": "^2.7.1"
   },
   "dependencies": {
